--- a/index.html
+++ b/index.html
@@ -1,4 +1,57 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/44d3323d79/craiova/" data-label_1="CRAIOVA" data-label_2="WEATHER" data-icons="Climacons Animated" data-theme="dark" >CRAIOVA WEATHER</a>
+<html> 
+<head>
+    <title>Greeting Message</title> 
+    <style>
+#lbl {
+    font-family: monospace;
+    font-size: xx-large;
+    color: #626262;
+    padding: 5px;
+    border: 1px solid #ececec;
+    text-align: center;
+    line-height: 1.5;
+    height:85%
+
+
+}
+#date{
+    font-size:large;
+}
+body{
+    background-color: aliceblue;
+}
+    </style>
+</head>
+<body>
+    <div id="lbl"></div>
+</body>
+
 <script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+    var weekday = new Array(7);
+    weekday[0] = "DUMINICA";
+    weekday[1] = "LUNI";
+    weekday[2] = "MARTI";
+    weekday[3] = "MIERCURI";
+    weekday[4] = "JOI";
+    weekday[5] = "VINERI";
+    weekday[6] = "SAMBATA";
+
+    
+    var today = new Date();
+    var hrs = today.getHours();
+    var dayOfWeek = weekday[today.getDay()];
+    var date = dayOfWeek+" " + today.getDate() + "/" +(today.getMonth()+1) +'/'+today.getFullYear()  ;
+
+    var greet;
+
+    if (hrs < 12)
+        greet = 'BUNA DIMINEATA!  ';
+    else if (hrs >= 12 && hrs <= 17)
+        greet = 'BUNA ZIUA! ';
+    else if (hrs >= 17 && hrs <= 24)
+        greet = 'BUNA SEARA  ';
+
+    document.getElementById('lbl').innerHTML =
+        greet+= "Andrei" `<div id="date"> It's ${date}</div>`;
+</script> 
+</html>
