--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ body{
 
 <script>
     var weekday = new Array(7);
-    weekday[0] = "DUMINICA";
-    weekday[1] = "LUNI";
-    weekday[2] = "MARTI";
-    weekday[3] = "MIERCURI";
-    weekday[4] = "JOI";
-    weekday[5] = "VINERI";
-    weekday[6] = "SAMBATA";
+    weekday[0] = "Sunday";
+    weekday[1] = "Monday";
+    weekday[2] = "Tuesday";
+    weekday[3] = "Wednesday";
+    weekday[4] = "Thursday";
+    weekday[5] = "Friday";
+    weekday[6] = "Saturday";
 
     
     var today = new Date();
@@ -45,13 +45,13 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'BUNA DIMINEATA!  ';
+        greet = 'Good Morning  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'BUNA ZIUA! ';
+        greet = 'Good Afternoon ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'BUNA SEARA  ';
+        greet = 'Good Evening  ';
 
     document.getElementById('lbl').innerHTML =
-        greet+= "Andrei" `<div id="date"> It's ${date}</div>`;
+        greet+=`<div id="date"> It's ${date}</div>`;
 </script> 
 </html>
